--- a/public/styles.css
+++ b/public/styles.css
@@ -216,3 +216,15 @@ p + p {
   background-color: #4CAF50;
   color: white;
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto;
+  grid-gap: 10px;
+  padding: 10px;
+}
+
+.grid-container > div {
+  text-align: center;
+  padding: 20px 0;
+}
