now wehave arranged

--- a/public/styles.css
+++ b/public/styles.css
@@ -227,3 +227,10 @@ p + p {
 .grid-container > div {
   text-align: center;
 }
+
+.messages-list {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: 10px;
+  padding: 10px;
+}
